NB Reporting Module: - added export all button for KZT reports

--- a/nicnbk-ui-angular2/src/app/reporting/view/generated.reports.nb.reporting.component.html
+++ b/nicnbk-ui-angular2/src/app/reporting/view/generated.reports.nb.reporting.component.html
@@ -76,7 +76,10 @@
                     </td>
                 </tr>
                 <tr bgcolor="#e7e7e7">
-                    <td colspan="2">&nbsp;</td>
+                    <td colspan="1">&nbsp;</td>
+                    <td colspan="1">
+                        <button class="btn btn-xs btn-success" (click)="exportAll()">EXPORT ALL</button>
+                    </td>
                 </tr>
                 <tr>
                     <td>1 - ОФП</td>
