--- a/nicnbk-ui-angular2/src/app/app.component.html
+++ b/nicnbk-ui-angular2/src/app/app.component.html
@@ -123,6 +123,7 @@
                         <!--<li><a [routerLink]="['/hf/dashboard']" >Dashboard</a></li>-->
                         <li><a [routerLink]="['/hf/fundSearch']">Fund Search</a></li>
                         <li><a [routerLink]="['/hf/managerSearch']">Manager Search</a></li>
+                        <li><a [routerLink]="['/hf/research']">Research</a></li>
                         <!--<li><a [routerLink]="['/hf/fundSelection']">Fund Selection </a></li>-->
                         <!--<li><a [routerLink]="['/hf/portfolio']">Portfolio </a></li>-->
                         <!--<li><a [routerLink]="['/hf/report']">Report </a></li>-->
