--- a/nicnbk-ui-angular2/src/app/reporting/view/consolidated.kzt.form.7.nb.reporting.component.html
+++ b/nicnbk-ui-angular2/src/app/reporting/view/consolidated.kzt.form.7.nb.reporting.component.html
@@ -54,6 +54,7 @@
                         <td rowspan="2">Дата погашения</td>
                         <td rowspan="2">Ставка вознаграждения (годовых)</td>
                         <td rowspan="2">Количество выплат вознаграждения в году</td>
+                        <td rowspan="2">Валюта</td>
                         <td colspan="9">Остаток на начало отчетного периода</td>
                         <td colspan="9">Обороты</td>
                         <td colspan="9">Остаток на конец отчетного периода</td>
@@ -124,6 +125,7 @@
                         <td>34</td>
                         <td>35</td>
                         <td>36</td>
+                        <td>37</td>
                     </tr>
                     <tr *ngFor="let record of records">
                         <td>{{record.accountNumber}}</td>
@@ -135,6 +137,7 @@
                         <td>&nbsp;</td>
                         <td>&nbsp;</td>
                         <td>&nbsp;</td>
+                        <td>{{record.currency}}</td>
                         <td>&nbsp;</td>
                         <td>{{record.debtStartPeriod != null && record.debtStartPeriod != 0 ? (record.debtStartPeriod | number:'1.2-2') : ''}}</td>
                         <td>&nbsp;</td>
@@ -176,7 +179,7 @@
                         <td rowspan="2">Наименование контрагента/эмитента</td>
                         <td rowspan="2">Национальный идентификационный номер, международный идентификационный номер</td>
                         <td rowspan="2">Дата приобретения</td>
-                        <!--<td rowspan="2">Дата погашения</td>-->
+                        <td rowspan="2">Валюта</td>
                         <!--<td rowspan="2">Ставка вознаграждения (годовых)</td>-->
                         <!--<td rowspan="2">Количество выплат вознаграждения в году</td>-->
                         <td colspan="3">Остаток на начало отчетного периода</td>
@@ -223,32 +226,33 @@
                         <!--<td>8</td>-->
                         <!--<td>9</td>-->
                         <!--<td>10</td>-->
-                        <td>11</td>
+                        <td>10</td>
+                        <td>12</td>
                         <!--<td>12</td>-->
                         <!--<td>13</td>-->
                         <!--<td>14</td>-->
                         <!--<td>15</td>-->
-                        <td>16</td>
+                        <td>17</td>
                         <!--<td>17</td>-->
-                        <td>18</td>
+                        <td>19</td>
                         <!--<td>19</td>-->
-                        <td>20</td>
+                        <td>21</td>
                         <!--<td>21</td>-->
                         <!--<td>22</td>-->
                         <!--<td>23</td>-->
                         <!--<td>24</td>-->
-                        <td>25</td>
                         <td>26</td>
+                        <td>27</td>
                         <!--<td>27</td>-->
                         <!--<td>28</td>-->
-                        <td>29</td>
+                        <td>30</td>
                         <!--<td>30</td>-->
                         <!--<td>31</td>-->
                         <!--<td>32</td>-->
                         <!--<td>33</td>-->
-                        <td>34</td>
+                        <td>35</td>
                         <!--<td>35</td>-->
-                        <td>36</td>
+                        <td>37</td>
                     </tr>
                     <tr *ngFor="let record of records">
                         <td>{{record.accountNumber}}</td>
@@ -257,7 +261,7 @@
                         <td>{{record.entityName}}</td>
                         <td>{{record.otherName}}</td>
                         <td>{{record.purchaseDate}}</td>
-                        <!--<td>&nbsp;</td>-->
+                        <td>{{record.currency}}</td>
                         <!--<td>&nbsp;</td>-->
                         <!--<td>&nbsp;</td>-->
                         <!--<td>&nbsp;</td>-->
