--- a/nicnbk-ui-angular2/src/app/hf/view/hf.screening.list.component.html
+++ b/nicnbk-ui-angular2/src/app/hf/view/hf.screening.list.component.html
@@ -15,51 +15,50 @@
         </div>
     </div>
 
+    <div class="row withpadding">
+        <a [routerLink]="['/hf/screening/edit/',0 ]" class="btn btn-primary pull-right">NEW</a>
+    </div>
     <br/>
 
     <div class="jumbotron">
         <br/>
-        <form (ngSubmit)="search()">
-            <div class="row">
-                <div class="col-md-12">
-                    <div class="col-md-9">
-                        <div class="form-group">
-                            <label for="fundName">SCREENING SEARCH</label>
-                            <input type="text" class="form-control" id="fundName" [(ngModel)]="searchParams.name" name="fundName"
-                            placeholder="Searching..."
-                            />
-                        </div>
+        <div class="row">
+            <div class="col-md-12">
+                <div class="col-md-6">
+                    <div class="form-group">
+                        <label for="searchText">Search text</label>
+                        <input type="text" class="form-control" id="searchText" [(ngModel)]="searchParams.searchText" name="searchText"
+                        placeholder="Enter keywords to search..."
+                        />
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <label for="fromDateDTPickeer">From</label>
+                    <div class='input-group date col-md-3' id='fromDateDTPickeer' style="width: 100%">
+                        <input type='text' class="form-control" id="dateFrom" [(ngModel)]="searchParams.dateFrom"/>
+                                    <span class="input-group-addon">
+                                        <span class="glyphicon glyphicon-calendar"></span>
+                                    </span>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <label for="untilDateDTPickeer">To</label>
+                    <div class='input-group date col-md-3' id='untilDateDTPickeer' style="width: 100%">
+                        <input type='text' class="form-control" id="dateTo" [(ngModel)]="searchParams.dateTo"/>
+                                    <span class="input-group-addon">
+                                        <span class="glyphicon glyphicon-calendar"></span>
+                                    </span>
                     </div>
                 </div>
             </div>
-            <!--<div class="row">-->
-                <!--<div class="col-md-12">-->
-                    <!--<div class="col-md-3">-->
-                        <!--<div class="form-group">-->
-                            <!--<label for="strategy">Strategy</label>-->
-                            <!--<select class="form-control" id="strategy">-->
-                                <!--<option value="0">-&#45;&#45;</option>-->
-                                <!--<option *ngFor = "let item of strategyList" [value]="item.code">{{item.nameEn}}</option>-->
-                            <!--</select>-->
-                        <!--</div>-->
-                    <!--</div>-->
-                    <!--<div class="col-md-3">-->
-                        <!--<div class="form-group">-->
-                            <!--<label for="status">Status</label>-->
-                            <!--<select class="form-control" id="status">-->
-                                <!--<option value="0">-&#45;&#45;</option>-->
-                                <!--<option *ngFor = "let item of statusList" [value]="item.code">{{item.nameEn}}</option>-->
-                            <!--</select>-->
-                        <!--</div>-->
-                    <!--</div>-->
-                <!--</div>-->
-            <!--</div>-->
-            <div class="row">
-                <div class="col-md-12">
-                    <button type="submit" class="btn btn-success pull-right">Search</button>
-                </div>
+        </div>
+
+        <div class="row">
+            <div class="col-md-12">
+                <button type="button" (click)="clearSearchForm()" class="btn btn-xs btn-default pull-left">Clear</button>
+                <button type="button" (click)="search()" class="btn btn-success pull-right">Search</button>
             </div>
-        </form>
+        </div>
     </div>
 
     <div>
@@ -80,6 +79,7 @@
             <tr>
                 <!--<th>&nbsp;</th>-->
                 <th>DATE</th>
+                <th>NAME</th>
                 <th>CREATED BY</th>
                 <th>UPDATED</th>
                 <th>UPDATED BY</th>
@@ -88,12 +88,13 @@
 
             <tbody>
 
-            <tr *ngFor = "let record of records">
+            <tr *ngFor = "let screening of screenings" style="cursor: pointer">
                 <!--<td width="5%"></td>-->
-                <td width="30%"><a></a>{{record.date}}</td>
-                <td width="10%">{{fund.owner}}</td>
-                <td width="10%">{{fund.updateDate}}</td>
-                <td width="10%">{{fund.updater}}</td>
+                <td width="30%"(click)="navigate(screening.id)">{{screening.date}}</td>
+                <td width="30%" (click)="navigate(screening.id)">{{screening.name}}</td>
+                <td width="10%" (click)="navigate(screening.id)">{{screening.creator}}</td>
+                <td width="10%" (click)="navigate(screening.id)">{{screening.updateDate}}</td>
+                <td width="10%" (click)="navigate(screening.id)">{{screening.updater}}</td>
                 <!--<td width="5%">-->
                     <!--<a><i class="glyphicon glyphicon-file"></i></a>-->
                 <!--</td>-->
