First release commit

--- a/nicnbk-ui-angular2/src/app/app.component.html
+++ b/nicnbk-ui-angular2/src/app/app.component.html
@@ -82,6 +82,7 @@
                         <li role="separator" class="divider"></li>
                         <!--<li><a [routerLink]="['/monitoring/hf']" data-toggle="tooltip" title="Monitoring Hedge Funds Portfolio">Hedge Funds Portfolio</a></li>-->
                         <li><a [routerLink]="['/monitoring/hf2']" data-toggle="tooltip" title="Monitoring Tarragon">Singularity</a></li>
+                        <li><a [routerLink]="['/monitoring/hflist']" data-toggle="tooltip" title="Hedge Funds portfolio updates">HF Portfolio Updates</a></li>
                     </ul>
                 </li>
                 <!--<li [routerLinkActive]="['active']" >-->
