--- a/nicnbk-ui-angular2/src/app/monitoring/view/monitoring-hedge-funds-research.component.html
+++ b/nicnbk-ui-angular2/src/app/monitoring/view/monitoring-hedge-funds-research.component.html
@@ -35,7 +35,9 @@
                     <dt class="col-sm-3">NIC coverage</dt>
                     <dd class="col-sm-9">{{researchForm.nicCoverage}}</dd>
                     <dt class="col-sm-3">Website for clients</dt>
-                    <dd class="col-sm-9"><a href="{{researchForm.website}}" target="_blank">{{researchForm.website}}</a></dd>
+                    <dd class="col-sm-9">
+                        <a href="//{{researchForm.website}}" target="_blank">{{researchForm.website}}</a>
+                    </dd>
                     <dt class="col-sm-3">Types of communication</dt>
                     <dd class="col-sm-9">{{researchForm.typesOfCommunication}}
                     <dt class="col-sm-3">Key people</dt>
